<resources>
    <string name="app_name">Bored API</string>
    <string name="cost_slider_desc">Проведите пальцем по экрану, чтобы установить стоимость. 0 — бесплатно, а 100 — немного затрат. ;)</string>
    <string name="access_slider_desc">Проведите пальцем по экрану, чтобы выбрать доступность этого действия. 0 легко доступен, а 100 не так уж и много..</string>
    <string name="Default_Options_Display">Текущая активность: ПОЛНОСТЬЮ СЛУЧАЙНО</string>
    <string name="click_here">Click Here!</string>
    <string name="come_to_see">Come to see!</string>
    <string name="bored">Bored?</string>
    <string name="randomly">Генерируйте случайную активность!</string>
    <string name="random">Ваша активность будет генерироваться здесь!</string>
    <string name="settings">Здесь появится ваш вариант настройки.</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="_0">0%</string>
    <string name="цвуапкекцнт">0%</string>
    <string name="customize">Customize</string>
    <string name="favourites">Favourites</string>
    <string name="alone">Alone</string>
    <string name="_2_people">2 People</string>
    <string name="_3_people">3 People</string>
    <string name="_4_people">4 People</string>
    <string name="more_than_4_people">More than 4 People</string>
    <string name="education">Education</string>
    <string name="recreational">Recreational</string>
    <string name="diy">DIY</string>
    <string name="charity">Charity</string>
    <string name="cooking">Cooking</string>
    <string name="relaxation">Relaxation</string>
    <string name="music">Music</string>
    <string name="busywork">Busywork</string>
    <string name="social">Social</string>
</resources>