<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/item1"
        android:title="@string/education" />

    <item
        android:id="@+id/item2"
        android:title="@string/recreational" />

    <item
        android:id="@+id/item3"
        android:title="@string/social" />

    <item
        android:id="@+id/item4"
        android:title="@string/diy" />

    <item
        android:id="@+id/item5"
        android:title="@string/charity" />

    <item
        android:id="@+id/item6"
        android:title="@string/cooking" />

    <item
        android:id="@+id/item7"
        android:title="@string/relaxation" />

    <item
        android:id="@+id/item8"
        android:title="@string/music" />

    <item
        android:id="@+id/item9"
        android:title="@string/busywork" />

</menu>
